updates to background colors for test

--- a/less/agency.less
+++ b/less/agency.less
@@ -167,10 +167,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-    background-image: url('../img/header-bg.jpg');
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-position: center center;
+//    background-image: url('../img/header-bg.jpg');
+//    background-repeat: no-repeat;
+//    background-attachment: scroll;
+//    background-position: center center;
+      background-color: #3232CD;  
     .background-cover;
     text-align: center;
     color: white;
@@ -536,9 +537,9 @@ aside.clients {
 
 section#contact {
     background-color: @gray-darker;
-    background-image: url('../img/map-image.png');
-    background-position: center;
-    background-repeat: no-repeat;
+//    background-image: url('../img/map-image.png');
+//    background-position: center;
+//    background-repeat: no-repeat;
     .section-heading {
         color: white;
     }
