--- a/css/agency.css
+++ b/css/agency.css
@@ -226,10 +226,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/header-bg.jpg');
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: center center;
+  background-color: #3232CD;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -555,9 +552,6 @@ aside.clients img {
 }
 section#contact {
   background-color: #222222;
-  background-image: url('../img/map-image.png');
-  background-position: center;
-  background-repeat: no-repeat;
 }
 section#contact .section-heading {
   color: white;
