--- a/less/agency.less
+++ b/less/agency.less
@@ -82,6 +82,13 @@ h1, h2, h3, h4, h5, h6 {
     padding: 20px 40px;
 }
 
+// Section Styling
+
+#section-heading-teamroster {
+    color: #fff;
+}
+
+
 // Custom Navigation Bar
 
 .navbar-custom {
@@ -231,6 +238,7 @@ section {
         font-size: 40px;
         margin-top: 0;
         margin-bottom: 15px;
+        color: red;
     }
     h3.section-subheading {
         font-size: 16px;
