--- a/less/agency.less
+++ b/less/agency.less
@@ -179,11 +179,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-//    background-image: url('../img/header-bg.jpg');
-//    background-repeat: no-repeat;
-//    background-attachment: scroll;
-//    background-position: center center; 
-    background-color: @blue-base;
+    background-image: url('../img/logos/IMG_5491.jpg');
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: center center; 
+//    background-color: @blue-base;
     .background-cover;
     text-align: center;
     color: white;
