--- a/css/agency.css
+++ b/css/agency.css
@@ -232,7 +232,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/logos/tibet_bg.jpg');
+  background-image: url('../img/logos/tibet_bg2.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
