--- a/less/agency.less
+++ b/less/agency.less
@@ -65,6 +65,20 @@ h1, h2, h3, h4, h5, h6 {
     background-color: @gray-darker;
 }
 
+// logo colors
+
+.intro-caption-team {
+    color: red;
+}
+
+.intro-caption-tibet {
+    color: green;
+}
+
+.intro-caption-snowlion {
+    color: white;
+}
+
 // Restyled Primary Buttons
 
 .btn-primary {
