--- a/less/agency.less
+++ b/less/agency.less
@@ -252,7 +252,7 @@ section {
         font-size: 40px;
         margin-top: 0;
         margin-bottom: 15px;
-        color: red;
+        color: #000;
     }
     h3.section-subheading {
         font-size: 16px;
