--- a/css/agency.css
+++ b/css/agency.css
@@ -309,6 +309,12 @@ section h3.section-subheading {
   font-weight: 400;
   margin-bottom: 75px;
 }
+section#about {
+  background-color: #eee;
+}
+section#teamroster {
+  background-color: #fff;
+}
 @media (min-width: 768px) {
   section {
     padding: 150px 0;
@@ -570,10 +576,10 @@ aside.clients img {
   margin: 50px auto;
 }
 section#contact {
-  background-color: #222222;
+  background-color: #eeeeee;
 }
 section#contact .section-heading {
-  color: white;
+  color: #000;
 }
 section#contact .form-group {
   margin-bottom: 25px;
@@ -620,6 +626,9 @@ section#contact :-ms-input-placeholder {
 }
 section#contact .text-danger {
   color: #e74c3c;
+}
+section#contact .form-control {
+  border: 1px solid #000 !important;
 }
 footer {
   padding: 25px 0;
