add blue to color

--- a/css/agency.css
+++ b/css/agency.css
@@ -67,6 +67,9 @@ h6 {
 .intro-caption-snowlion {
   color: white;
 }
+.intro-caption-blue {
+  color: blue;
+}
 .btn-primary {
   color: white;
   background-color: #fed136;
