--- a/less/agency.less
+++ b/less/agency.less
@@ -79,6 +79,10 @@ h1, h2, h3, h4, h5, h6 {
     color: white;
 }
 
+.intro-caption-blue {
+    color: blue;
+}
+
 // Restyled Primary Buttons
 
 .btn-primary {
