add official calendar

--- a/less/agency.less
+++ b/less/agency.less
@@ -779,3 +779,9 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: @theme-primary;
 }
+
+// Calendar
+
+.schedule-gcalendar {
+    width: 100%;
+}
